# project-suggestions

./: .env.example  .env.example.development  .env.example.production  .gitignore  Cargo.toml  Dockerfile  README.md  compose.local.yml  compose.production.yml  compose.yml
.sqlx/: query-09d80c2e45e67ec224b72d15b77f9df60a4dd056e6cb9fd527d4a745d3d944b5.json  query-0a3ce12870c88a74c7117625766900fa285c2cf46ea858ddbd53424afb342589.json  query-0e7d9a0db3d47b1f2cc5d0d95b54b1a58a4b89c1f468bf065dacdb9d03586fd7.json  query-1679b7867ae6100bdfdccd65bc7986d5461d1674662c6400ea948352a71dc464.json  query-17e81f6e8c2f92310d3c5d4f363bca402b8883257dca85721fabe3aa9d4b85da.json  query-1e709a8e85892f223c7fedc33f1cca44ae2a8291a4315aec4e05b29717f05616.json  query-272c74be21c2c7908281ed171ba93dbe941168e9cd86ad2d7793ed21f2433118.json  query-3712b4ba3c5320896b9a5f80508437d37f645d1bced462c2656bff8d1f04ec69.json  query-4cd7b4188640bd06e99c0448e8d2ff977b775211e211615b3708d0f675460fb1.json  query-566a4cad66e691df4db51e5a8152ce68d0c981fe5cec2aef8a3f85b11bdbfce2.json  query-736a34ec61f2d6d6bb037db2207860b25257576cde93219aad932888d7669d46.json  query-7da0e65be5f4f12b15d10c8950431fd24d53d2409b83544ee0526b2f2aae673c.json  query-859b0f38c23df3c18766a4d204d91295fa3a382eefc01ee7c9b3729e99a3eb25.json  query-8d0ee0518c95a6ff6f21ad47832de23d41b98a417fb1fa8d7ccbcf7b3c32012f.json  query-afc528c1dbb5d53635ee9500c2744c86765ed55d0bd60a874ba8f347835cda38.json  query-b5314399c1eefd8e7a9aa178735c0251d332698fa2674edc26e32a844f7e542e.json  query-c7bb3d7dfcf3e543790ad20cc28f889a1e4ba534e03e43468086424660ab5cc9.json  (+1 more)
src/: config.rs  main.rs  state.rs
(+36 files in other folders)
