[package]
name = "project-suggestions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
axum = "0.7.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
dotenv = "0.15.0"
url = "2.5.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
time = "0.3.36"
