[package]
name = "project-suggestions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
axum = "0.7.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
dotenvy = "0.15.7"
url = "2.5.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
time = "0.3.36"
uuid = { version = "1.8.0", features = ["v4"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "tls-native-tls",
    "chrono",
] }
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
tower-http = { version = "0.5.2", features = ["fs"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
